Increase carousel arrow size to 40px font-size with larger containers to prevent clipping

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -2832,15 +2832,15 @@ header
                                     position: absolute
                                     top: 50%
                                     transform: translateY(-50%)
-                                    width: 40px
-                                    height: 40px
+                                    width: 60px
+                                    height: 60px
                                     background: transparent
                                     border: none
                                     border-radius: 50%
                                     display: flex
                                     align-items: center
                                     justify-content: center
-                                    font-size: 28px
+                                    font-size: 40px
                                     font-weight: bold
                                     color: $light_blue
                                     cursor: pointer
@@ -2849,14 +2849,14 @@ header
                                     user-select: none
                                     
                                     +container-1024px
-                                        width: 35px
-                                        height: 35px
-                                        font-size: 24px
+                                        width: 50px
+                                        height: 50px
+                                        font-size: 32px
                                     
                                     +container-768px
-                                        width: 30px
-                                        height: 30px
-                                        font-size: 20px
+                                        width: 45px
+                                        height: 45px
+                                        font-size: 28px
                                     
                                     &:hover
                                         background: $light_blue
